--- a/package.json
+++ b/package.json
@@ -2,18 +2,15 @@
   "name": "plain-http",
   "version": "1.0.0",
   "description": "A plain old nodejs http server",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "private": true,
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/theonejonahgold/plain-http.git"
+    "url": "theonejonahgold/plain-http"
   },
   "author": "Jonah Meijers <jonahmeijers97@gmail.com> (https://jonahmeijers.nl)",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/theonejonahgold/plain-http/issues"
+    "url": "theonejonahgold/plain-http/issues"
   },
   "homepage": "https://github.com/theonejonahgold/plain-http#readme",
   "dependencies": {
